--- a/client/main.html
+++ b/client/main.html
@@ -1,5 +1,7 @@
 <head>
-  <title>Simple Contact</title>
+    <title>Simple Contact</title>
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Roboto:300,400,500">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
 </head>
 
 <body>
